# rain

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
examples/: demo.rs
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/std/error/: trait.Error.js
rain/: index.html  sidebar-items.js  struct.Graph.html
rain/error/: ErrorType.t.html  RainError.t.html  RainResult.t.html  bail.v.html  enum.ErrorType.html  fn.bail.html  index.html  sidebar-items.js  struct.RainError.html  type.RainResult.html
src/: error.rs  lib.rs
src/rain/src/: error.rs.html  lib.rs.html
tests/: error.rs  lib.rs
