[package]
name = "rain"
version = "0.3.0"
license = "MIT"
readme = "README.md"
keywords = ["log", "logger", "vertical", "terminal", "graph"]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
repository = "https://github.com/saschagrunert/rain"
homepage = "https://github.com/saschagrunert/rain"
documentation = "https://docs.rs/rain"
description = "Visualize vertical data inside your terminal."
categories = ["command-line-utilities"]
license-file = "LICENSE"

[badges]
travis-ci = { repository = "saschagrunert/rain", branch = "master" }
appveyor = { repository = "saschagrunert/rain", branch = "master", service = "github" }

[dependencies]
log = "0"
mowl = "1"
termion = "1"

[dev-dependencies]
rand = "0"
